Ajustement de la taille du logo et du menu burger, ajout d’un texte explicatif à la section À propos, et intégration de nouvelles images dans la galerie

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hero -->
     <section class="hero" aria-label="Présentation de l'entreprise">
       <div class="hero__content">
-        <h1 class="hero__title">Savourez l’élégance du vin <br> congolais</h1>
+        <h1 class="hero__title">Savourez l’élégance du vin congolais</h1>
         <p class="hero__description">
             Ave Maria vous invite à un voyage sensoriel à travers ses vins artisanaux,
             alliant tradition, passion et caractère. Une expérience unique née du cœur du Congo.
@@ -45,20 +45,20 @@
     <!-- À propos (aperçu) -->
     <section class="about-preview" aria-label="Aperçu à propos">
   <div class="about-preview__wrapper">
-    
-    <!-- Colonne image à gauche -->
     <div class="about-preview__image-wrapper">
       <img src="assets/a-propo.jpg" alt="Photo de la famille Ave Maria" class="about-preview__image">
     </div>
 
     <!-- Colonne contenu à droite -->
     <div class="about-preview__content">
-      <h2 class="about-preview__title">Une passion familiale</h2>
-      <p class="about-preview__text">
-        Ave Maria, c’est plus qu’un vin — c’est une tradition transmise de génération en génération au cœur du Congo.
-      </p>
-      <a href="a-propos.html" class="about-preview__link">Voir plus</a>
-    </div>
+  <h2 class="about-preview__title">Créateur de vins congolais</h2>
+  <p class="about-preview__text">
+    Ave Maria est une entreprise congolaise familiale fondée par Justin Mola Bosenge, animée par une passion profonde pour la viticulture artisanale et l’innovation locale. Depuis ses débuts, l’entreprise s’est donnée pour mission de créer des marques de vins congolais uniques, qui allient qualité, tradition et créativité.
+    Derrière chaque étiquette se cache une histoire, une ambition : valoriser la culture locale à travers des vins qui rassemblent et inspirent.
+  </p>
+  <a href="a-propos.html" class="about-preview__link">Voir plus</a>
+</div>
+
 
   </div>
 </section>
@@ -95,7 +95,7 @@
 
     <!-- Carte 3 -->
     <article class="wine-card">
-      <img src="assets/nos-vins-3.jpg" alt="Vin Rosé" class="wine-card__image" />
+      <img src="assets/nos-vins-2.jpg" alt="Vin Rosé" class="wine-card__image" />
       <h3 class="wine-card__name">Rosé Tropical</h3>
       <p class="wine-card__description">Élaboré avec passion, idéal pour les soirées détendues et festives.</p>
       <div class="wine-card__footer">
@@ -121,20 +121,20 @@
   </p>
   <div class="gallery__grid" role="list">
     <figure class="gallery__item gallery__item--large-left" role="listitem">
-      <img src="assets/galery-7.jpg" alt="Cave de vieillissement des vins Ave Maria" class="gallery__image" />
-      <figcaption class="gallery__caption">Notre cave de maturation artisanale</figcaption>
+      <img src="assets/manifest-1.jpg" alt="Cave de vieillissement des vins Ave Maria" class="gallery__image" />
+      <figcaption class="gallery__caption">Une reconnaissance méritée pour l’excellence de la marque Wiva Kamouna.</figcaption>
     </figure>
     <figure class="gallery__item gallery__item--top-middle" role="listitem">
-      <img src="assets/galery-6.jpg" alt="Dégustation de vin lors d'un salon" class="gallery__image" />
-      <figcaption class="gallery__caption">Moment de partage en salon</figcaption>
+      <img src="assets/manifest-2.jpg" alt="Dégustation de vin lors d'un salon" class="gallery__image" />
+      <figcaption class="gallery__caption">Justin Mola partage la vision d’Ave Maria avec un passionné de vin lors de l’exposition.</figcaption>
     </figure>
     <figure class="gallery__item gallery__item--bottom-middle" role="listitem">
-      <img src="assets/galery-5.jpg" alt="Bouteilles prêtes pour l’expédition" class="gallery__image" />
-      <figcaption class="gallery__caption">Expédition en cours</figcaption>
+      <img src="assets/manifest-3.jpg" alt="Bouteilles prêtes pour l’expédition" class="gallery__image" />
+      <figcaption class="gallery__caption">Un représentant d’Ave Maria présente Wiva Kamouna à un ministre d’État congolais.</figcaption>
     </figure>
     <figure class="gallery__item gallery__item--large-right" role="listitem">
-      <img src="assets/galery-4.jpg" alt="Équipe Ave Maria réunie autour du pressoir" class="gallery__image" />
-      <figcaption class="gallery__caption">Notre équipe au cœur de l’action</figcaption>
+      <img src="assets/manifest-4.jpg" alt="Équipe Ave Maria réunie autour du pressoir" class="gallery__image" />
+      <figcaption class="gallery__caption">Un moment d’appréciation : le vin Kamouna séduit même les plus hautes autorités.</figcaption>
     </figure>
   </div>
 </section>
