Ajout de plusieurs sections sur la page d'accueil (FAQ, Témoignages, Quick Order), finalisation du footer, intégration des liens vers les réseaux sociaux dans la navigation mobile, et création de la page page-en-construction pour présenter les pages et sections en cours de réalisation.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="styles/main.css">
+    <script src="js/app.js" defer></script>
 </head>
 <body>
 <header class="header">
   <nav class="navbar">
-    <img src="assets/logo.jpg" class="navbar__logo" alt="logo">
+    <img src="assets/logo.webp" class="navbar__logo" alt="logo">
 
     <input type="checkbox" id="click" class="navbar__checkbox">
     <label for="click" class="navbar__toggle">
@@ -20,9 +21,22 @@
 
     <ul class="navbar__menu">
       <li class="navbar__item"><a href="#accueil" class="navbar__link">Accueil</a></li>
-      <li class="navbar__item"><a href="#historique" class="navbar__link">À propos</a></li>
-      <li class="navbar__item"><a href="#commander" class="navbar__link">Nos vins</a></li>
-      <li class="navbar__item"><a href="#contact" class="navbar__link">Contact</a></li>
+      <li class="navbar__item"><a href="page-en-construction.html" class="navbar__link">À propos</a></li>
+      <li class="navbar__item"><a href="page-en-construction.html" class="navbar__link">Nos vins</a></li>
+      <li class="navbar__item"><a href="page-en-construction.html" class="navbar__link">Contact</a></li>
+      <!-- les liens vers les reseaux sociaux -->
+      <li class="navbar__socials">
+        <a href="https://facebook.com" target="_blank" class="facebook" aria-label="Facebook">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://wa.me/0000000000" target="_blank" class="whatsapp" aria-label="WhatsApp">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://linkedin.com" target="_blank" class="linkedin" aria-label="LinkedIn">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </li>
+
     </ul>
   </nav>
 </header>
@@ -46,7 +60,7 @@
     <section class="about-preview" aria-label="Aperçu à propos">
   <div class="about-preview__wrapper">
     <div class="about-preview__image-wrapper">
-      <img src="assets/a-propo.jpg" alt="Photo de la famille Ave Maria" class="about-preview__image">
+      <img src="assets/a-propo.webp" alt="Photo de la famille Ave Maria" class="about-preview__image">
     </div>
 
     <!-- Colonne contenu à droite -->
@@ -56,7 +70,7 @@
     Ave Maria est une entreprise congolaise familiale fondée par Justin Mola Bosenge, animée par une passion profonde pour la viticulture artisanale et l’innovation locale. Depuis ses débuts, l’entreprise s’est donnée pour mission de créer des marques de vins congolais uniques, qui allient qualité, tradition et créativité.
     Derrière chaque étiquette se cache une histoire, une ambition : valoriser la culture locale à travers des vins qui rassemblent et inspirent.
   </p>
-  <a href="a-propos.html" class="about-preview__link">Voir plus</a>
+  <a href="page-en-construction.html" class="about-preview__link">Voir plus</a>
 </div>
 
 
@@ -73,7 +87,7 @@
 
     <!-- Carte 1 -->
     <article class="wine-card">
-      <img src="assets/nos-vins-1.jpg" alt="Vin Wiva Kamouna" class="wine-card__image" />
+      <img src="assets/nos-vins-1.webp" alt="Vin Wiva Kamouna" class="wine-card__image" />
       <h3 class="wine-card__name">Wiva Kamouna</h3>
       <p class="wine-card__description">Fabriqué à base de feuilles d’avocatier, de miel et d’un savoir-faire local unique.</p>
       <div class="wine-card__footer">
@@ -84,7 +98,7 @@
 
     <!-- Carte 2 -->
     <article class="wine-card">
-      <img src="assets/nos-vins-2.jpg" alt="Vin Blanc" class="wine-card__image" />
+      <img src="assets/nos-vins-2.webp" alt="Vin Blanc" class="wine-card__image" />
       <h3 class="wine-card__name">Vin Blanc Ave Maria</h3>
       <p class="wine-card__description">Un vin frais aux arômes floraux, parfait pour les moments de célébration.</p>
       <div class="wine-card__footer">
@@ -95,7 +109,7 @@
 
     <!-- Carte 3 -->
     <article class="wine-card">
-      <img src="assets/nos-vins-2.jpg" alt="Vin Rosé" class="wine-card__image" />
+      <img src="assets/nos-vins-2.webp" alt="Vin Rosé" class="wine-card__image" />
       <h3 class="wine-card__name">Rosé Tropical</h3>
       <p class="wine-card__description">Élaboré avec passion, idéal pour les soirées détendues et festives.</p>
       <div class="wine-card__footer">
@@ -106,9 +120,8 @@
 
   </div>
 
-  <!-- Bouton Voir Plus -->
   <div class="wines-preview__more">
-    <a href="nos-vins.html" class="wines-preview__btn">Voir plus</a>
+    <a href="page-en-construction.html" class="wines-preview__btn">Voir plus</a>
   </div>
 </section>
 
@@ -117,23 +130,24 @@
     <section class="gallery" aria-label="Galerie de nos produits">
   <h2 class="gallery__title">Galerie</h2>
   <p class="gallery__description">
-    Plongez dans l’univers Ave Maria à travers cette galerie captivante. Des instants de création, de dégustation et de passion, immortalisés pour vous faire ressentir l’âme de nos vins congolais.
+    Parcourez les moments forts des expositions où Ave Maria a présenté avec fierté sa première marque, Wiva Kamouna. Entre rencontres, reconnaissances et dégustations, chaque image témoigne de notre engagement pour l’excellence viticole congolaise.
   </p>
+
   <div class="gallery__grid" role="list">
     <figure class="gallery__item gallery__item--large-left" role="listitem">
-      <img src="assets/manifest-1.jpg" alt="Cave de vieillissement des vins Ave Maria" class="gallery__image" />
+      <img src="assets/manifest-1.webp" alt="Cave de vieillissement des vins Ave Maria" class="gallery__image" />
       <figcaption class="gallery__caption">Une reconnaissance méritée pour l’excellence de la marque Wiva Kamouna.</figcaption>
     </figure>
     <figure class="gallery__item gallery__item--top-middle" role="listitem">
-      <img src="assets/manifest-2.jpg" alt="Dégustation de vin lors d'un salon" class="gallery__image" />
+      <img src="assets/manifest-2.webp" alt="Dégustation de vin lors d'un salon" class="gallery__image" />
       <figcaption class="gallery__caption">Justin Mola partage la vision d’Ave Maria avec un passionné de vin lors de l’exposition.</figcaption>
     </figure>
     <figure class="gallery__item gallery__item--bottom-middle" role="listitem">
-      <img src="assets/manifest-3.jpg" alt="Bouteilles prêtes pour l’expédition" class="gallery__image" />
+      <img src="assets/manifest-3.webp" alt="Bouteilles prêtes pour l’expédition" class="gallery__image" />
       <figcaption class="gallery__caption">Un représentant d’Ave Maria présente Wiva Kamouna à un ministre d’État congolais.</figcaption>
     </figure>
     <figure class="gallery__item gallery__item--large-right" role="listitem">
-      <img src="assets/manifest-4.jpg" alt="Équipe Ave Maria réunie autour du pressoir" class="gallery__image" />
+      <img src="assets/manifest-4.webp" alt="Équipe Ave Maria réunie autour du pressoir" class="gallery__image" />
       <figcaption class="gallery__caption">Un moment d’appréciation : le vin Kamouna séduit même les plus hautes autorités.</figcaption>
     </figure>
   </div>
@@ -141,39 +155,170 @@
 
 
     <!-- FAQ -->
-    <section class="faq" aria-label="Questions fréquentes">
+  <section class="faq" aria-label="Questions fréquentes">
   <h2 class="faq__title">FAQ</h2>
   <div class="faq__container">
-    <div class="faq__card">
-      <h3 class="faq__question">Où est fabriqué le vin Ave Maria ?</h3>
-      <p class="faq__answer">Nos vins sont élaborés au cœur du Congo, dans le respect des traditions locales.</p>
+    <div class="faq__item">
+      <button class="faq__question">
+        Où est fabriqué le vin Ave Maria ?
+        <i class="fas fa-chevron-down faq__icon"></i>
+      </button>
+      <div class="faq__answer">
+        Nos vins sont soigneusement élaborés au cœur du Congo, dans nos ateliers artisanaux situés à Kinshasa. Nous combinons techniques modernes et traditions locales pour garantir une qualité exceptionnelle.
+      </div>
     </div>
-    <div class="faq__card">
-      <h3 class="faq__question">Quels cépages sont utilisés ?</h3>
-      <p class="faq__answer">Nous utilisons une sélection de cépages locaux soigneusement cultivés et récoltés à la main.</p>
+
+    <div class="faq__item">
+      <button class="faq__question">
+        Quels cépages sont utilisés ?
+        <i class="fas fa-chevron-down faq__icon"></i>
+      </button>
+      <div class="faq__answer">
+        Nous utilisons des cépages locaux rigoureusement sélectionnés pour leur adaptabilité au climat congolais. Chaque grappe est récoltée à la main, puis triée avec soin pour obtenir un vin équilibré et riche en arômes.
+      </div>
+    </div>
+
+    <div class="faq__item">
+      <button class="faq__question">
+        Comment conserver les bouteilles de vin Ave Maria ?
+        <i class="fas fa-chevron-down faq__icon"></i>
+      </button>
+      <div class="faq__answer">
+        Pour préserver au mieux les qualités gustatives de nos vins, il est recommandé de conserver les bouteilles dans un endroit frais (environ 12°C), à l’abri de la lumière et en position couchée si le bouchon est en liège.
+      </div>
+    </div>
+
+    <div class="faq__item">
+      <button class="faq__question">
+        Peut-on visiter votre cave ou vos ateliers ?
+        <i class="fas fa-chevron-down faq__icon"></i>
+      </button>
+      <div class="faq__answer">
+        Oui, nous organisons régulièrement des visites guidées pour les passionnés de vin. Vous pouvez découvrir notre processus de fabrication, échanger avec nos œnologues et déguster nos différentes gammes.
+      </div>
+    </div>
+
+    <div class="faq__item">
+      <button class="faq__question">
+        Où acheter les vins Ave Maria ?
+        <i class="fas fa-chevron-down faq__icon"></i>
+      </button>
+      <div class="faq__answer">
+        Nos produits sont disponibles dans plusieurs points de vente à Kinshasa, Lubumbashi et Goma. 
+        Vous pouvez également commander directement via le compte whatsapp de monsieur Justin Mola pour une livraison rapide et sécurisée.
+      </div>
     </div>
   </div>
 </section>
 
 
 
+
+
     <!-- Témoignages -->
-    <section class="testimonials" aria-label="Avis des clients">
-      <h2 class="testimonials__title">Ils parlent de nous</h2>
-      <blockquote class="testimonial">
+   <section class="testimonials" aria-label="Avis des clients">
+  <h2 class="testimonials__title">Ils parlent de nous</h2>
+  <div class="testimonials__slider">
+    <div class="testimonials__track">
+      <div class="testimonial__card">
         <p class="testimonial__text">“Un goût unique qui me rappelle les moments en famille.”</p>
-        <footer class="testimonial__author">— Jean, Kinshasa</footer>
-      </blockquote>
-    </section>
+        <footer class="testimonial__author">Christian Imbanzia</footer>
+      </div>
+      <div class="testimonial__card">
+        <p class="testimonial__text">“Une belle surprise ! Le vin Wiva Kamouna allie douceur et caractère. Bravo à l’équipe Ave Maria.”</p>
+        <footer class="testimonial__author">Clotis Modiri</footer>
+      </div>
+      <div class="testimonial__card">
+        <p class="testimonial__text">“J’ai fait découvrir ce vin à mes collègues européens, ils en redemandent ! Fier de notre terroir.”</p>
+        <footer class="testimonial__author">Glodie Bimbakila</footer>
+      </div>
+      <!-- j'ai doublé les cards pour avoir l'effet de boucle infinie -->
+      <div class="testimonial__card">
+        <p class="testimonial__text">“Un goût unique qui me rappelle les moments en famille.”</p>
+        <footer class="testimonial__author">Christian Imbanzia</footer>
+      </div>
+      <div class="testimonial__card">
+        <p class="testimonial__text">“Une belle surprise ! Le vin Wiva Kamouna allie douceur et caractère. Bravo à l’équipe Ave Maria.”</p>
+        <footer class="testimonial__author">Clotis Modiri</footer>
+      </div>
+      <div class="testimonial__card">
+        <p class="testimonial__text">“J’ai fait découvrir ce vin à mes collègues européens, ils en redemandent ! Fier de notre terroir.”</p>
+        <footer class="testimonial__author">Glodie Bimbakila</footer>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="quick-order" aria-label="Commande rapide">
+  <h2 class="quick-order__title">Faites votre commande rapide</h2>
+  <p class="quick-order__description">
+    Ne perdez pas une minute ! Commandez dès maintenant votre vin Ave Maria et vivez l’expérience unique du terroir congolais.
+  </p>
+  <button class="quick-order__btn" id="orderBtn">Commander maintenant</button>
+</section>
+
+<!-- Modal -->
+<div class="order-modal" id="orderModal" aria-hidden="true">
+  <div class="order-modal__content">
+    <p class="order-modal__message">
+      Vous allez être redirigé vers le compte WhatsApp de <strong>Justin Mola Bosenge</strong> pour finaliser votre commande.
+    </p>
+    <div class="order-modal__actions">
+      <a href="https://wa.me/243810905452?text=Bonjour%2C%20je%20viens%20depuis%20le%20site%20Ave%20Maria%20pour%20passer%20ma%20commande." class="order-modal__btn order-modal__btn--confirm" target="_blank" rel="noopener">
+        Vas-y
+      </a>
+      <button class="order-modal__btn order-modal__btn--cancel" id="cancelBtn">Annuler</button>
+    </div>
+  </div>
+</div>
+
+
     
   </main>
 
-  <footer class="footer" role="contentinfo">
-    <div class="footer__content">
-      <p class="footer__text">© 2025 Ave Maria. Tous droits réservés.</p>
-      <a href="contact.html" class="footer__link">Nous contacter</a>
+  <footer class="footer">
+  <div class="footer__container">
+
+    <!-- Colonne 1 : Logo + message + réseaux sociaux -->
+    <div class="footer__column">
+      <img src="assets/logo.webp" alt="Logo Ave Maria" class="footer__logo">
+      <p class="footer__message">Célébrons ensemble l’élégance du vin congolais.</p>
+      <div class="footer__socials">
+        <a href="#" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" class="social-icon whatsapp"><i class="fab fa-whatsapp"></i></a>
+      </div>
     </div>
-  </footer>
+
+    <!-- Colonne 2 : Navigation -->
+    <div class="footer__column">
+      <h3 class="footer__heading">Navigation</h3>
+      <ul class="footer__links">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="#a-propos">À propos</a></li>
+        <li><a href="#nos-vins">Nos vins</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Colonne 3 : Contact -->
+    <div class="footer__column">
+      <h3 class="footer__heading">Nous contacter</h3>
+      <ul class="footer__contact">
+        <li><i class="fas fa-map-marker-alt"></i> 7, Ebengo, Mikondo, Kinshasa</li>
+        <li><i class="fas fa-phone-alt"></i> +243 810 905 452</li>
+        <li><i class="fab fa-whatsapp"></i> +243 999 192 399</li>
+        <li><i class="fas fa-envelope"></i> josmakengim@gmail.com</li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer__bottom">
+    <p>&copy; 2025 Ave Maria. Tous droits réservés.</p>
+  </div>
+</footer>
+<button class="scroll-to-top" aria-label="Retour en haut">
+    <i class="fas fa-chevron-up"></i>
+</button>
 
 </body>
 </html>
