--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <!-- FAQ -->
   <section class="faq" aria-label="Questions fréquentes">
-  <h2 class="faq__title">FAQ</h2>
+  <h2 class="faq__title">Questions fréquentes</h2>
   <div class="faq__container">
     <div class="faq__item">
       <button class="faq__question">
