Amélioration de la section témoignages

--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
     <link rel="stylesheet" href="styles/main.css">
     <script src="js/app.js" defer></script>
 </head>
-<body>
-<header class="header">
-  <nav class="navbar">
-    <img src="assets/logo.webp" class="navbar__logo" alt="logo">
+  <body>
+    <header class="header">
+      <nav class="navbar">
+        <img src="assets/logo.webp" class="navbar__logo" alt="logo">
 
-    <input type="checkbox" id="click" class="navbar__checkbox">
-    <label for="click" class="navbar__toggle">
-      <i class="fa-solid fa-bars" id="menu"></i>
-      <i class="fa-solid fa-xmark" id="close"></i>
-    </label>
+        <input type="checkbox" id="click" class="navbar__checkbox">
+        <label for="click" class="navbar__toggle">
+          <i class="fa-solid fa-bars" id="menu"></i>
+          <i class="fa-solid fa-xmark" id="close"></i>
+        </label>
 
-    <ul class="navbar__menu">
-      <li class="navbar__item"><a href="#accueil" class="navbar__link">Accueil</a></li>
-      <li class="navbar__item"><a href="page-en-construction.html" class="navbar__link">À propos</a></li>
-      <li class="navbar__item"><a href="page-en-construction.html" class="navbar__link">Nos vins</a></li>
-      <li class="navbar__item"><a href="page-en-construction.html" class="navbar__link">Contact</a></li>
-      <!-- les liens vers les reseaux sociaux -->
-      <li class="navbar__socials">
-        <a href="https://facebook.com" target="_blank" class="facebook" aria-label="Facebook">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="https://wa.me/0000000000" target="_blank" class="whatsapp" aria-label="WhatsApp">
-          <i class="fab fa-whatsapp"></i>
-        </a>
-        <a href="https://linkedin.com" target="_blank" class="linkedin" aria-label="LinkedIn">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-      </li>
+        <ul class="navbar__menu">
+          <li class="navbar__item"><a href="#accueil" class="navbar__link">Accueil</a></li>
+          <li class="navbar__item"><a href="page-en-construction.html" class="navbar__link">À propos</a></li>
+          <li class="navbar__item"><a href="page-en-construction.html" class="navbar__link">Nos vins</a></li>
+          <li class="navbar__item"><a href="page-en-construction.html" class="navbar__link">Contact</a></li>
+          <!-- les liens vers les reseaux sociaux -->
+          <li class="navbar__socials">
+            <a href="https://facebook.com" target="_blank" class="facebook" aria-label="Facebook">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://wa.me/0000000000" target="_blank" class="whatsapp" aria-label="WhatsApp">
+              <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="https://linkedin.com" target="_blank" class="linkedin" aria-label="LinkedIn">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
 
-    </ul>
-  </nav>
-</header>
+        </ul>
+    </nav>
+  </header>
 
 
   <main class="main-content" role="main">
@@ -58,43 +58,44 @@
 
     <!-- À propos (aperçu) -->
     <section class="about-preview" aria-label="Aperçu à propos">
-  <div class="about-preview__wrapper">
-    <div class="about-preview__image-wrapper">
-      <img src="assets/a-propo.webp" alt="Photo de la famille Ave Maria" class="about-preview__image">
-    </div>
+      <div class="about-preview__wrapper">
+        <div class="about-preview__image-wrapper">
+         <img src="assets/a-propo.webp" alt="Photo de la famille Ave Maria" class="about-preview__image">
+        </div>
 
     <!-- Colonne contenu à droite -->
-    <div class="about-preview__content">
-  <h2 class="about-preview__title">Créateur de vins congolais</h2>
-  <p class="about-preview__text">
-    Ave Maria est une entreprise congolaise familiale fondée par Justin Mola Bosenge, animée par une passion profonde pour la viticulture artisanale et l’innovation locale. Depuis ses débuts, l’entreprise s’est donnée pour mission de créer des marques de vins congolais uniques, qui allient qualité, tradition et créativité.
-    Derrière chaque étiquette se cache une histoire, une ambition : valoriser la culture locale à travers des vins qui rassemblent et inspirent.
-  </p>
-  <a href="page-en-construction.html" class="about-preview__link">Voir plus</a>
-</div>
-
-
-  </div>
-</section>
+        <div class="about-preview__content">
+          <h2 class="about-preview__title">Créateur de vins congolais</h2>
+          <p class="about-preview__text">
+            Ave Maria est une entreprise congolaise familiale fondée par Justin Mola Bosenge, animée par une passion 
+            profonde pour la viticulture artisanale et l’innovation locale. Depuis ses débuts, l’entreprise s’est 
+            donnée pour mission de créer des marques de vins congolais uniques, qui allient qualité, 
+            tradition et créativité.Derrière chaque étiquette se cache une histoire, 
+            une ambition : valoriser la culture locale à travers des vins qui rassemblent et inspirent.
+          </p>
+          <a href="page-en-construction.html" class="about-preview__link">Voir plus</a>
+        </div>
+      </div>
+    </section>
 
 
 
     <!-- Nos vins (aperçu) -->
     <section class="wines-preview" aria-label="Nos produits phares">
-  <h2 class="wines-preview__title">Nos Vins</h2>
+      <h2 class="wines-preview__title">Nos Vins</h2>
 
-  <div class="wines-preview__list">
+      <div class="wines-preview__list">
 
     <!-- Carte 1 -->
-    <article class="wine-card">
-      <img src="assets/nos-vins-1.webp" alt="Vin Wiva Kamouna" class="wine-card__image" />
-      <h3 class="wine-card__name">Wiva Kamouna</h3>
-      <p class="wine-card__description">Fabriqué à base de feuilles d’avocatier, de miel et d’un savoir-faire local unique.</p>
-      <div class="wine-card__footer">
-        <span class="wine-card__price">12 000 FC</span>
-        <a href="nos-vins.html" class="wine-card__btn">Commander</a>
-      </div>
-    </article>
+        <article class="wine-card">
+          <img src="assets/nos-vins-1.webp" alt="Vin Wiva Kamouna" class="wine-card__image" />
+          <h3 class="wine-card__name">Wiva Kamouna</h3>
+          <p class="wine-card__description">Fabriqué à base de feuilles d’avocatier, de miel et d’un savoir-faire local unique.</p>
+          <div class="wine-card__footer">
+            <span class="wine-card__price">12 000 FC</span>
+            <a href="nos-vins.html" class="wine-card__btn">Commander</a>
+          </div>
+        </article>
 
     <!-- Carte 2 -->
     <article class="wine-card">
@@ -130,7 +131,9 @@
     <section class="gallery" aria-label="Galerie de nos produits">
   <h2 class="gallery__title">Galerie</h2>
   <p class="gallery__description">
-    Parcourez les moments forts des expositions où Ave Maria a présenté avec fierté sa première marque, Wiva Kamouna. Entre rencontres, reconnaissances et dégustations, chaque image témoigne de notre engagement pour l’excellence viticole congolaise.
+    Parcourez les moments forts des expositions où Ave Maria a présenté avec fierté sa première marque, Wiva Kamouna.
+    Entre rencontres, reconnaissances et dégustations, chaque image témoigne de notre engagement pour 
+    l’excellence viticole congolaise.
   </p>
 
   <div class="gallery__grid" role="list">
@@ -164,7 +167,8 @@
         <i class="fas fa-chevron-down faq__icon"></i>
       </button>
       <div class="faq__answer">
-        Nos vins sont soigneusement élaborés au cœur du Congo, dans nos ateliers artisanaux situés à Kinshasa. Nous combinons techniques modernes et traditions locales pour garantir une qualité exceptionnelle.
+        Nos vins sont soigneusement élaborés au cœur du Congo, dans nos ateliers artisanaux situés à Kinshasa.
+        Nous combinons techniques modernes et traditions locales pour garantir une qualité exceptionnelle.
       </div>
     </div>
 
@@ -174,7 +178,8 @@
         <i class="fas fa-chevron-down faq__icon"></i>
       </button>
       <div class="faq__answer">
-        Nous utilisons des cépages locaux rigoureusement sélectionnés pour leur adaptabilité au climat congolais. Chaque grappe est récoltée à la main, puis triée avec soin pour obtenir un vin équilibré et riche en arômes.
+        Nous utilisons des cépages locaux rigoureusement sélectionnés pour leur adaptabilité au climat congolais. 
+        Chaque grappe est récoltée à la main, puis triée avec soin pour obtenir un vin équilibré et riche en arômes.
       </div>
     </div>
 
@@ -184,7 +189,8 @@
         <i class="fas fa-chevron-down faq__icon"></i>
       </button>
       <div class="faq__answer">
-        Pour préserver au mieux les qualités gustatives de nos vins, il est recommandé de conserver les bouteilles dans un endroit frais (environ 12°C), à l’abri de la lumière et en position couchée si le bouchon est en liège.
+        Pour préserver au mieux les qualités gustatives de nos vins, il est recommandé de conserver les bouteilles 
+        dans un endroit frais (environ 12°C), à l’abri de la lumière et en position couchée si le bouchon est en liège.
       </div>
     </div>
 
@@ -194,7 +200,8 @@
         <i class="fas fa-chevron-down faq__icon"></i>
       </button>
       <div class="faq__answer">
-        Oui, nous organisons régulièrement des visites guidées pour les passionnés de vin. Vous pouvez découvrir notre processus de fabrication, échanger avec nos œnologues et déguster nos différentes gammes.
+        Oui, nous organisons régulièrement des visites guidées pour les passionnés de vin. Vous pouvez découvrir notre 
+        processus de fabrication, échanger avec nos œnologues et déguster nos différentes gammes.
       </div>
     </div>
 
@@ -205,7 +212,8 @@
       </button>
       <div class="faq__answer">
         Nos produits sont disponibles dans plusieurs points de vente à Kinshasa, Lubumbashi et Goma. 
-        Vous pouvez également commander directement via le compte whatsapp de monsieur Justin Mola pour une livraison rapide et sécurisée.
+        Vous pouvez également commander directement via le compte whatsapp de monsieur Justin Mola 
+        pour une livraison rapide et sécurisée.
       </div>
     </div>
   </div>
@@ -216,7 +224,7 @@
 
 
     <!-- Témoignages -->
-   <section class="testimonials" aria-label="Avis des clients">
+  <section class="testimonials" aria-label="Avis des clients">
   <h2 class="testimonials__title">Ils parlent de nous</h2>
   <div class="testimonials__slider">
     <div class="testimonials__track">
@@ -249,6 +257,7 @@
   </div>
 </section>
 
+<!-- la section pour la commande rapide -->
 <section class="quick-order" aria-label="Commande rapide">
   <h2 class="quick-order__title">Faites votre commande rapide</h2>
   <p class="quick-order__description">
@@ -257,7 +266,7 @@
   <button class="quick-order__btn" id="orderBtn">Commander maintenant</button>
 </section>
 
-<!-- Modal -->
+<!-- fenêtre modale -->
 <div class="order-modal" id="orderModal" aria-hidden="true">
   <div class="order-modal__content">
     <p class="order-modal__message">
@@ -279,7 +288,6 @@
   <footer class="footer">
   <div class="footer__container">
 
-    <!-- Colonne 1 : Logo + message + réseaux sociaux -->
     <div class="footer__column">
       <img src="assets/logo.webp" alt="Logo Ave Maria" class="footer__logo">
       <p class="footer__message">Célébrons ensemble l’élégance du vin congolais.</p>
@@ -290,18 +298,16 @@
       </div>
     </div>
 
-    <!-- Colonne 2 : Navigation -->
     <div class="footer__column">
       <h3 class="footer__heading">Navigation</h3>
       <ul class="footer__links">
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="#a-propos">À propos</a></li>
-        <li><a href="#nos-vins">Nos vins</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="page-en-construction.html">À propos</a></li>
+        <li><a href="page-en-construction.html">Nos vins</a></li>
+        <li><a href="page-en-construction.html">Contact</a></li>
       </ul>
     </div>
 
-    <!-- Colonne 3 : Contact -->
     <div class="footer__column">
       <h3 class="footer__heading">Nous contacter</h3>
       <ul class="footer__contact">
