Désactivation visuelle de la section témoignages, à retravailler plus tard

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 
     <!-- Témoignages -->
-  <section class="testimonials" aria-label="Avis des clients">
+  <!-- <section class="testimonials" aria-label="Avis des clients">
   <h2 class="testimonials__title">Ils parlent de nous</h2>
   <div class="testimonials__slider">
     <div class="testimonials__track">
@@ -240,7 +240,7 @@
         <p class="testimonial__text">“J’ai fait découvrir ce vin à mes collègues européens, ils en redemandent ! Fier de notre terroir.”</p>
         <footer class="testimonial__author">Glodie Bimbakila</footer>
       </div>
-      <!-- j'ai doublé les cards pour avoir l'effet de boucle infinie -->
+      
       <div class="testimonial__card">
         <p class="testimonial__text">“Un goût unique qui me rappelle les moments en famille.”</p>
         <footer class="testimonial__author">Christian Imbanzia</footer>
@@ -255,7 +255,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- la section pour la commande rapide -->
 <section class="quick-order" aria-label="Commande rapide">
